--- a/public/layout/sass/_testing.scss
+++ b/public/layout/sass/_testing.scss
@@ -96,7 +96,7 @@
                 margin: 0;
                 border: 0;
                 outline: 0;
-                padding: 10px;
+                padding: 10px 30px;
                 height: 45%;
                 resize: 0;
                 @include type-light;
