--- a/public/layout/sass/_typography.scss
+++ b/public/layout/sass/_typography.scss
@@ -77,12 +77,18 @@ h4 {
 	margin: 0 0 $pad/4 0;
 }
 
+h5 {
+	@include type-xsm($fg-grey-text);
+	@include type-regular;
+}
+
 /* copy */
 
 p, pre {
 	padding: 0;
 	margin: 0 0 10px 0;
 	@include type-p-no-colour;
+	@include type-light;
 }
 
 strong {
