--- a/public/layout/sass/_variables.scss
+++ b/public/layout/sass/_variables.scss
@@ -30,6 +30,10 @@ $type-p-line: 18px;
 $type-sm-size: 12px;
 $type-sm-line: 15px;
 
+$type-xsm-size: 10px;
+$type-xsm-line: 11px;
+
+
 
 
 /* padding/margins vars */
